[package]
name = "qprov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bincode = "1.3.3"
boxed-array = "0.1.0"
dilithium = "0.1.1"
openssl = "0.10.52"
rand = "0.4.6"
rmce = { version = "0.1.0", path = "../rmce" }
serde = { version = "1.0.160", features = ["derive"] }
snap = "1.1.0"
tokio = { version = "1.27.0", features = ["io-util"] }
